--- a/client/src/app/shared/user-search/user-search.component.html
+++ b/client/src/app/shared/user-search/user-search.component.html
@@ -1,14 +1,14 @@
 <mat-form-field>
   <mat-select
     [formControl]="comboCtrl"
-    placeholder="Selecciona profesional"
+    placeholder="Selecciona un profesor"
     required
     #singleSelect
   >
     <mat-option>
       <ngx-mat-select-search
         [formControl]="comboFilterCtrl"
-        placeholderLabel="Busca un profesional..."
+        placeholderLabel="Busca un profesor..."
         [noEntriesFoundLabel]="'No hay resultados'"
       ></ngx-mat-select-search>
     </mat-option>
