--- a/client/src/app/pages/admin/courses/course-detail/course-detail.component.html
+++ b/client/src/app/pages/admin/courses/course-detail/course-detail.component.html
@@ -32,7 +32,7 @@
     <div class="col-12">
       <app-user-search
         [roles]="[2]"
-        [comboCtrl]="form.get('users')"
+        [comboCtrl]="form.get('TeacherId')"
       ></app-user-search>
     </div>
   </div>
@@ -44,6 +44,21 @@
           formControlName="period"
           matInput
           placeholder="Cuatrimestre"
+          autocomplete="off"
+          required
+        />
+        <mat-error>requerido</mat-error>
+      </mat-form-field>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-sm-12 col-md-12">
+      <mat-form-field>
+        <input
+          type="number"
+          formControlName="year"
+          matInput
+          placeholder="Año"
           autocomplete="off"
           required
         />
