--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -23,7 +23,7 @@
         <div class="form-group m-t-20">
           <div class="col-xs-12">
             <input
-              formControlName="fullname"
+              formControlName="firstname"
               name="name"
               class="form-control"
               type="text"
