--- a/client/src/app/pages/admin/students/student-detail/student-detail.component.html
+++ b/client/src/app/pages/admin/students/student-detail/student-detail.component.html
@@ -18,7 +18,7 @@
       <input type="hidden" formControlName="id" />
       <mat-form-field>
         <input
-          formControlName="fullname"
+          formControlName="firstname"
           matInput
           placeholder="Nombre/s"
           required
