--- a/client/src/app/pages/admin/students/student-list/student-list.component.html
+++ b/client/src/app/pages/admin/students/student-list/student-list.component.html
@@ -12,33 +12,12 @@
             Crear
           </button>
 
-          <!-- <app-export-fab [options]="FabOptions" [fields]="fieldsColumns" [filter]="filter" [vertical]="true" [fileName]="fileName"></app-export-fab> -->
-          <mat-form-field class="search-form-field" floatLabel="never">
-            <input matInput #input placeholder="Buscar..." autocomplete="off" />
-            <button
-              mat-button
-              matSuffix
-              mat-icon-button
-              aria-label="Clear"
-              *ngIf="true"
-              (click)="onSearchClear()"
-            >
-              <mat-icon>close</mat-icon>
-            </button>
-          </mat-form-field>
-          <!-- <mat-checkbox [(ngModel)]="checked" (click)="showValue()">Mostrar deshabilitados</mat-checkbox> -->
+       
         </div>
 
-        <div class="spinner-container" *ngIf="dataSource.loading$ | async">
-          <mat-spinner></mat-spinner>
-        </div>
         <div class="mat-elevation-z8">
           <mat-table
             [dataSource]="dataSource"
-            matSort
-            matSortActive="id"
-            matSortDirection="asc"
-            matSortDisableClear
           >
             <ng-container matColumnDef="img">
               <mat-header-cell *matHeaderCellDef>Foto</mat-header-cell>
@@ -51,12 +30,12 @@
                 />
               </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="fullname">
+            <ng-container matColumnDef="firstname">
               <mat-header-cell *matHeaderCellDef mat-sort-header>
                 Nombre
               </mat-header-cell>
               <mat-cell *matCellDef="let element">
-                {{ element.fullname }}
+                {{ element.firstname }}
               </mat-cell>
             </ng-container>
             <ng-container matColumnDef="lastname">
@@ -136,13 +115,7 @@
             ></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
           </mat-table>
-          <mat-paginator
-            #paginator
-            [length]="dataSource.count$ | async"
-            showFirstLastButtons="true"
-            [pageSize]="10"
-            [pageSizeOptions]="[5, 10, 25, 100]"
-          ></mat-paginator>
+    
         </div>
       </div>
     </div>
