--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -250,7 +250,7 @@
                     <img [src]="user.img | image" alt="user" />
                   </div>
                   <div class="u-text">
-                    <h4>{{ user.fullname }}</h4>
+                    <h4>{{ user.firstname }}</h4>
                     <p class="text-muted">{{ user.email }}</p>
                     <a
                       routerLink="/profile"
