--- a/client/src/app/shared/sidebar/sidebar.component.html
+++ b/client/src/app/shared/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
     <nav class="sidebar-nav">
       <ul id="sidebarnav">
         <li class="user-profile">
-          <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img [src]="user.img | image" alt="user" /><span class="hide-menu">{{ user.fullname }} </span></a>
+          <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img [src]="user.img | image" alt="user" /><span class="hide-menu">{{ user.firstname }} </span></a>
           <ul aria-expanded="false" class="collapse">
             <li><a routerLinkActive="active" routerLink="/profile">Perfil</a></li>
             <li><a routerLinkActive="active" routerLink="/account-settings">Configuración</a></li>
