--- a/client/src/app/shared/user-search/user-search.component.html
+++ b/client/src/app/shared/user-search/user-search.component.html
@@ -13,7 +13,7 @@
       ></ngx-mat-select-search>
     </mat-option>
     <mat-option *ngFor="let c of filteredData | async" [value]="c.id">
-      {{ c.fullname }}
+      {{ c.firstname }}
     </mat-option>
   </mat-select>
   <mat-error>requerido</mat-error>
